# open-guard-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  deploy.sh
.github/workflows/: main.yml
.opencode/skill/bot-module-development/: SKILL.md
.opencode/skill/components-v2-content/: SKILL.md
.opencode/skill/components-v2-interactive/: SKILL.md
.opencode/skill/components-v2-layout/: SKILL.md
.opencode/skill/components-v2-modals/: SKILL.md
.opencode/skill/database-migrations/: SKILL.md
.opencode/skill/discord-modals/: SKILL.md
.opencode/skill/poise-commands/: SKILL.md
.opencode/skill/serenity-interactions/: SKILL.md
docs/: MODALS.md
locales/en-US/: commands.yaml  main.ftl
locales/tr/: commands.yaml  main.ftl
src/: main.rs
src/db/: mod.rs
src/db/entities/: guild_configs.rs  invite_events.rs  invite_snapshots.rs  invite_stats.rs  jails.rs  logging_guilds.rs  member_old_roles.rs  mod.rs  module_configs.rs  prelude.rs  temp_bans.rs  violations.rs  whitelist_role.rs  whitelist_user.rs  whitelists.rs
src/db/migrations/: m000001_create_guild_table.rs  m000002_add_log_channel.rs  m000003_create_module_config.rs  m000004_add_punishments.rs  m000005_create_violations.rs  m000006_create_whitelist_tables.rs  m000007_update_whitelist_indexes.rs  m000008_add_enabled_to_module_config.rs  m000009_create_temp_bans.rs  m000010_create_jails.rs  m000011_create_member_roles_tracking.rs  m000012_create_invite_tracking.rs  m20220101_000001_create_guild_table.rs  m20240109_000001_add_log_channel.rs  m20240109_000002_create_module_config.rs  mod.rs
src/modules/: mod.rs
src/modules/bot_adding_protection/: mod.rs
src/modules/bot_adding_protection/events/: audit_log.rs  mod.rs
src/modules/channel_permission_protection/: mod.rs
src/modules/channel_permission_protection/events/: audit_log.rs
src/modules/channel_protection/: mod.rs
src/modules/channel_protection/commands/: channel_protection.rs  (+1 more)
src/modules/config/: mod.rs
src/modules/hello/: mod.rs
src/modules/invite_tracking/: commands.rs  events.rs  mod.rs  stats.rs  tracking.rs
src/modules/logging/: mod.rs
src/modules/member_permission_protection/: mod.rs
src/modules/moderation_protection/: commands.rs  duration_parser.rs  mod.rs
src/modules/role_permission_protection/: mod.rs
src/modules/role_protection/: mod.rs
src/modules/sticky_roles/: mod.rs  tracking.rs
src/services/: cache.rs  config.rs  event_manager.rs  help.rs  localization.rs  logger.rs  logging_cleanup.rs  mod.rs  prefix.rs  punishment.rs  status.rs  temp_ban.rs  whitelist.rs
src/services/config/: builders.rs  mod.rs  whitelist.rs
src/services/event_manager/: mod.rs
src/services/jail/: manager.rs  mod.rs  runner.rs
src/services/localization/: mod.rs
src/services/setup/: mod.rs  state.rs
(+46 files in other folders)
