[package]
name = "open-guard-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dotenvy = "0.15.7"
fluent = "0.17.0"
fluent-bundle = "0.16.0"
include_dir = "0.7.4"
intl-memoizer = "0.5.3"
papaya = "0.2.3"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serenity = { git = "https://github.com/serenity-rs/serenity.git", features = [
    "full",
], branch = "next" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
unic-langid = "0.9.6"
